--- a/GMServer/appsettings.json
+++ b/GMServer/appsettings.json
@@ -14,7 +14,7 @@
   },
 
   "AuthenticationSettings": {
-    "Key": "SuperDuperMagicKey"
+    "Key": "3DF90D%F67DS@FMKMF!DSF45SD£FMKSDF"
   },
 
   "Serilog": {
