--- a/GMServer/appsettings.json
+++ b/GMServer/appsettings.json
@@ -6,7 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
+  "AllowedHosts": "",
 
   "MongoSettings": {
     "ConnectionString": "mongodb://localhost:27017",
@@ -14,7 +14,8 @@
   },
 
   "AuthenticationSettings": {
-    "Key": "3DF90D%F67DS@FMKMF!DSF45SD£FMKSDF"
+    "Key": "SU8F20FPSL28FK19DMSO9WW0",
+    "Audience": "GMServer.Audience"
   },
 
   "Serilog": {
