--- a/GMServer/appsettings.Development.json
+++ b/GMServer/appsettings.Development.json
@@ -1,9 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "AuthenticationSettings": {
+    "Key": "SU8F20FPSL28FK19DMSO9WW0",
+    "Audience": "GMServer.Audience"
+  },
+
+  "MongoSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "GM_Net_Database"
   }
 }
