--- a/GMServer/Properties/launchSettings.json
+++ b/GMServer/Properties/launchSettings.json
@@ -9,14 +9,7 @@
     }
   },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "GMServer": {
+    "GMServer (Dev)": {
       "commandName": "Project",
       "launchUrl": "swagger",
       "environmentVariables": {
