Updated (Finished my migration?)

--- a/GMServer/appsettings.json
+++ b/GMServer/appsettings.json
@@ -25,7 +25,8 @@
           "rollingInterval": "Day",
           "rollOnFileSizeLimit": true,
           "fileSizeLimitBytes": "1024",
-          "restrictedToMinimumLevel": "Warning"
+          "restrictedToMinimumLevel": "Warning",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] {Message}{NewLine}{Exception}"
         }
       }
     ]
