--- a/GMServer/appsettings.Development.json
+++ b/GMServer/appsettings.Development.json
@@ -7,5 +7,9 @@
   "MongoSettings": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "GM_Net_Database"
+  },
+
+  "Encryption": {
+    "Key": "1234567895645451"
   }
 }
