--- a/GMServer/appsettings.Development.json
+++ b/GMServer/appsettings.Development.json
@@ -5,7 +5,7 @@
   },
 
   "MongoSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://user:pass@mongo:27017",
     "DatabaseName": "GM_Net_Database"
   },
 
