--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,6 @@ dotnet_diagnostic.CS8602.severity = suggestion
 
 # CS8604: Possible null reference argument.
 dotnet_diagnostic.CS8604.severity = suggestion
+
+# CS8603: Possible null reference return.
+dotnet_diagnostic.CS8603.severity = suggestion
