--- a/.editorconfig
+++ b/.editorconfig
@@ -17,3 +17,6 @@ dotnet_diagnostic.CS8603.severity = suggestion
 
 # CS8601: Possible null reference assignment.
 dotnet_diagnostic.CS8601.severity = suggestion
+
+# CS8625: Cannot convert null literal to non-nullable reference type.
+dotnet_diagnostic.CS8625.severity = suggestion
