--- a/GMServer/appsettings.Development.json
+++ b/GMServer/appsettings.Development.json
@@ -1,14 +1,13 @@
 {
   "AuthenticationSettings": {
-    "Key": "SU8F20FPSL28FK19DMSO9WW0",
-    "Audience": "GMServer.Audience"
+    "Key": "SU8F20FPSL28FK19DMSO9WW0"
   },
 
   "MongoSettings": {
     "ConnectionString": "mongodb://localhost:27017"
   },
 
-  "Encryption": {
+  "EncryptionSettings": {
     "Key": "1234567895645451"
   }
 }
