--- a/.editorconfig
+++ b/.editorconfig
@@ -20,3 +20,6 @@ dotnet_diagnostic.CS8601.severity = silent
 
 # CS8625: Cannot convert null literal to non-nullable reference type.
 dotnet_diagnostic.CS8625.severity = silent
+
+# CA1822: Mark members as static
+dotnet_diagnostic.CA1822.severity = silent
